--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - '5432:5432'
     volumes:
-      - ./scripts:/docker-entrypoint-initdb.d
+      - ./db:/docker-entrypoint-initdb.d
       - postgres_db:/var/lib/postgresql/data
 volumes:
   postgres_db:
